<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Home"
        android:icon="@drawable/ic_home2_black_24dp"
        android:iconTint="@color/colorPrimary"
        android:title="@string/title_activity_home" />
    <item
        android:id="@+id/calass"
        android:icon="@drawable/ic_school_150dp"
        android:title="@string/menue_class"
        android:iconTint="@color/colorPrimary"/>

    <item
        android:id="@+id/About_Us"
        android:icon="@drawable/ic_about_us_icon_company_info_sign_vector_20390216"
        android:title="@string/menu_aboutus"
        android:iconTint="@color/colorPrimary"/>
    <item
        android:icon="@drawable/ic_settings_150dp"
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>