<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Aboutus">

    <TextView
        android:id="@+id/txt_us"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:text="@string/title"
        android:textSize="35dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:fontFamily="@font/kamran1"/>

    <ImageView
        android:id="@+id/image_us"
        android:layout_width="wrap_content"
        android:layout_below="@id/txt_us"
        android:src="@drawable/about_us"

        android:layout_height="300dp" />

    <TextView
        android:id="@+id/about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/description"
        android:layout_marginTop="15dp"
        android:layout_below="@id/image_us"/>

    <TextView
        android:id="@+id/Us_Number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_us"
        android:layout_marginTop="0dp"
        android:text="09195061626"
        android:textSize="26dp"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/Bidar_Number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="آقای بیدار"
        android:layout_toRightOf="@id/Us_Number"/>

    <TextView
        android:id="@+id/about_us_gmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Us_Number"
        android:text="@string/gmail"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center_horizontal"
        android:textColor="@color/light_blue_600"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/about_us_click"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click"
        android:layout_below="@id/about_us_gmail"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>




</RelativeLayout>