<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:background="@drawable/login"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <LinearLayout
        android:id="@+id/ln_1"
        android:layout_width="351dp"
        android:layout_height="407dp"
        android:layout_centerInParent="true"
        android:background="@drawable/shape"
        android:orientation="horizontal">

        <TextView
            android:fontFamily="@font/rooh"
            android:id="@+id/txt_information"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txt_information"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="365dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="230dp"
        android:id="@+id/textinput_layout1"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_Edittext1"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textinput_layout1"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:minLines="3"
            android:singleLine="true"
            android:textAlignment="center"
            android:theme="@style/EditText.Green" />
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/btn_next"
        android:layout_marginTop="550dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:background="@drawable/ic_forward" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="365dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="300dp"
        android:id="@+id/textinput_layout2"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_Edittext2"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textinput_layout1"
            android:layout_alignBottom="@+id/textinput_layout1"
            android:layout_marginTop="200dp"
            android:hint="@string/hint_namekhanevadegi"
            android:inputType="text"
            android:minLines="3"
            android:singleLine="true"
            android:textAlignment="center"
            android:theme="@style/EditText.Green" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="365dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="370dp"
        android:id="@+id/textinput_layout3"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_Edittext3"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textinput_layout1"
            android:layout_alignBottom="@+id/textinput_layout1"
            android:layout_marginTop="200dp"
            android:hint="@string/hint_class"
            android:inputType="text"
            android:minLines="3"
            android:singleLine="true"
            android:textAlignment="center"
            android:theme="@style/EditText.Green" />
    </com.google.android.material.textfield.TextInputLayout>


</RelativeLayout>